// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip component should display ReactTooltip 1`] = `
<View
  collapsable={false}
>
  <TouchableOpacity
    accessibilityRole="link"
    activeOpacity={1}
    onPress={[Function]}
  >
    <Text>
      Press me
    </Text>
  </TouchableOpacity>
  <Component
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={true}
  >
    <TouchableOpacity
      accessibilityRole="link"
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.80)",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "left": -7.5,
            "position": "absolute",
            "top": -2,
          }
        }
      >
        <Triangle
          isDown={false}
          style={
            Object {
              "borderBottomColor": "#fff",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "display": "flex",
            "flex": 1,
            "height": 100,
            "justifyContent": "center",
            "left": -17.999,
            "padding": 10,
            "position": "absolute",
            "top": 10,
            "width": 200,
          }
        }
        testID="tooltipPopoverContainer"
      >
        <Styled(View)
          tooltipStyle={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "display": "flex",
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 200,
            }
          }
        >
          <Info />
        </Styled(View)>
      </View>
    </TouchableOpacity>
  </Component>
</View>
`;

exports[`Tooltip component should render without issues 1`] = `
<View
  collapsable={false}
>
  <TouchableOpacity
    accessibilityRole="link"
    activeOpacity={1}
    onPress={[Function]}
  >
    <Text>
      Press me
    </Text>
  </TouchableOpacity>
  <Component
    animationType="fade"
    hardwareAccelerated={false}
    onDismiss={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    transparent={true}
    visible={false}
  >
    <TouchableOpacity
      accessibilityRole="link"
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(250, 250, 250, 0.80)",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "left": -7.5,
            "position": "absolute",
            "top": -2,
          }
        }
      >
        <Triangle
          isDown={false}
          style={
            Object {
              "borderBottomColor": "#fff",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "display": "flex",
            "flex": 1,
            "height": 96,
            "justifyContent": "center",
            "left": -17.999,
            "padding": 10,
            "position": "absolute",
            "top": 10,
            "width": 240,
          }
        }
        testID="tooltipPopoverContainer"
      >
        <Styled(View)
          tooltipStyle={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "display": "flex",
              "flex": 1,
              "height": 96,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 240,
            }
          }
        >
          <Text>
            Info here
          </Text>
        </Styled(View)>
      </View>
    </TouchableOpacity>
  </Component>
</View>
`;
